# BinauralAU

./: .gitignore  Binaural.cpp  Binaural.h  BinauralVersion.h  CMakeLists.txt  Fir.cpp  Fir.h  README.md  hrtf.h
CMakeModules/: FindLibsndfile.cmake
CoreAudio/: CMakeLists.txt
ext/: CMakeLists.txt
hrtfs/: hrtf_elev-10.h  hrtf_elev-30.h  hrtf_elev0.h  hrtf_elev10.h  hrtf_elev20.h  hrtf_elev70.h  hrtf_elev80.h  hrtf_elev90.h
src/: Binaural.cpp  Binaural.exp  Binaural.h  Binaural.hpp  Binaural.r  BinauralVersion.h  CMakeLists.txt  Diffuse.cpp  Diffuse.h  Fir.cpp  Fir.h  HRTF.cpp  HRTF.h  HRTFDB.cpp  HRTFDB.h  Info.plist  InputBuffer.h  Old Binaural.cpp  Utils.h  Utils.m  hrtf.h  version.plist
src/Binaural.xcodeproj/: Coffey.mode1v3  Coffey.pbxuser  project.pbxproj
src/hrtfs/: create_elev0.m  create_elev10.m  create_elev30.m  create_elev40.m  create_elev50.m  create_elev60.m  create_elev70.m  create_elev80.m  create_elev90.m  create_elevMinus10.m  create_elevMinus20.m  create_elevMinus30.m  create_elevMinus40.m  hrtf_elev-20.h  hrtf_elev-40.h  hrtf_elev30.h  hrtf_elev40.h  hrtf_elev50.h  hrtf_elev60.h
